Fix(frontend): Minor change in spacings in Dev page

--- a/Software/AppWeb/frontend/src/components/ColumnsContainer/ColumnsContainer.css
+++ b/Software/AppWeb/frontend/src/components/ColumnsContainer/ColumnsContainer.css
@@ -3,7 +3,7 @@
     height: 100%;
     display: flex;
     flex-direction: row;
-    padding: 20px;
+    padding: 30px;
 }
 
 .column-visible {
